--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "storybook:build": "tsc && build-storybook"
   },
   "dependencies": {
+    "@holochain-open-dev/common": "git+https://github.com/holochain-open-dev/common.git#ui-build",
+    "@holochain-playground/container": "git+https://github.com/holochain-playground/container.git#build",
     "@holochain-playground/core": "git+https://github.com/holochain-playground/core.git#build",
+    "@open-wc/scoped-elements": "^1.3.3",
     "blockly": "git+https://github.com/guillemcordoba/blockly.git#build",
     "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2"
+    "lit-html": "^1.1.2",
+    "scoped-material-components": "git+https://github.com/guillemcordoba/scoped-material-components.git#build"
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^4.2.0",
