--- a/package.json
+++ b/package.json
@@ -16,57 +16,32 @@
     "storybook:build": "tsc && build-storybook"
   },
   "dependencies": {
-    "@holochain-open-dev/common": "git+https://github.com/holochain-open-dev/common.git#ui-build",
-    "@holochain-playground/container": "git+https://github.com/holochain-playground/container.git#build",
-    "@holochain-playground/core": "git+https://github.com/holochain-playground/core.git#build",
+    "@holochain-open-dev/core-types": "git+https://github.com/holochain-open-dev/core-types.git#build",
+    "@holochain-playground/core": "github:holochain-playground/core#build",
+    "@holochain-playground/elements": "git+https://github.com/holochain-playground/elements.git#build",
     "@open-wc/scoped-elements": "^1.3.3",
     "blockly": "git+https://github.com/guillemcordoba/blockly.git#build",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
-    "scoped-material-components": "git+https://github.com/guillemcordoba/scoped-material-components.git#build"
+    "scoped-material-components": "0.1.1"
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^4.2.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-replace": "^2.3.4",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
-    "@web/dev-server": "^0.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "@web/dev-server": "^0.1.8",
     "@web/dev-server-rollup": "^0.3.1",
-    "@web/dev-server-storybook": "^0.3.2",
     "concurrently": "^5.3.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^8.1.0",
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
     "prettier": "^2.0.4",
     "rollup": "^2.35.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "@open-wc/eslint-config",
-      "eslint-config-prettier"
-    ],
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "error"
-      ],
-      "import/no-unresolved": "off",
-      "import/extensions": [
-        "error",
-        "always",
-        {
-          "ignorePackages": true
-        }
-      ]
-    }
   },
   "prettier": {
     "singleQuote": true,
