--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "camelcase": "off",
     "prefer-destructuring": "off",
     "no-param-reassign": "off",
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "no-useless-escape": "off"
   }
 }
