--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "concurrently": "^5.3.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^8.1.0",
+    "gh-pages": "^3.1.0",
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
     "prettier": "^2.0.4",
