--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "scripts": {
-    "start": "concurrently -k \"npm:build-watch\" \"wds -c web-dev-server.config.mjs\"",
-    "build": "rimraf dist && rollup -c rollup.config.js",
-    "build-gh-pages": "rimraf dist && rollup -c rollup-gh-pages.config.js",
-    "build-watch": "rimraf dist && rollup -w -c rollup.config.js",
+    "start": "concurrently -k \"npm:build-watch\" \"wds --root-dir dist --app-index index.html --open --compatibility none\"",
+    "build": "rimraf dist && rollup -c rollup-gh-pages.config.js",
+    "build-watch": "rimraf dist && rollup -w -c rollup-gh-pages.config.js",
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "storybook": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds -c .storybook/server.mjs\"",
     "storybook:build": "tsc && build-storybook",
-    "publish-to-branch": "npm run build-gh-pages && gh-pages -d dist/ -b build"
+    "publish-to-branch": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@holochain-open-dev/core-types": "git+https://github.com/holochain-open-dev/core-types.git#build",
@@ -31,6 +30,7 @@
     "@open-wc/building-rollup": "^1.9.4",
     "@open-wc/eslint-config": "^4.2.0",
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^8.2.0",
@@ -46,6 +46,7 @@
     "lint-staged": "^10.0.0",
     "prettier": "^2.0.4",
     "rollup": "^2.35.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
   },
