--- a/package.json
+++ b/package.json
@@ -8,23 +8,22 @@
   "module": "dist/index.js",
   "scripts": {
     "start": "concurrently -k \"npm:build-watch\" \"wds --root-dir dist --app-index index.html --open --compatibility none\"",
-    "build": "rimraf dist && rollup -c rollup-gh-pages.config.js",
+    "build": "rimraf dist && rollup -c rollup.config.js",
     "build-watch": "rimraf dist && rollup -w -c rollup-gh-pages.config.js",
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "storybook": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds -c .storybook/server.mjs\"",
     "storybook:build": "tsc && build-storybook",
-    "publish-to-branch": "npm run build && gh-pages -d dist"
+    "publish-to-branch": "npm run build && gh-pages -d ./ -b build"
   },
   "dependencies": {
     "@holochain-open-dev/core-types": "git+https://github.com/holochain-open-dev/core-types.git#build",
     "@holochain-playground/core": "github:holochain-playground/core#build",
     "@holochain-playground/elements": "git+https://github.com/holochain-playground/elements.git#build",
-    "@open-wc/scoped-elements": "^1.3.3",
+    "@webcomponents/scoped-custom-element-registry": "0.0.1",
     "blockly": "git+https://github.com/guillemcordoba/blockly.git#build",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2",
-    "scoped-material-components": "0.1.2"
+    "lit": "^2.0.0-rc.1",
+    "scoped-material-components": "0.1.6"
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.9.4",
