--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@holochain-open-dev/core-types": "git+https://github.com/holochain-open-dev/core-types.git#build",
     "@holochain-playground/core": "github:holochain-playground/core#build",
     "@holochain-playground/elements": "git+https://github.com/holochain-playground/elements.git#build",
+    "@webcomponents/scoped-custom-element-registry": "0.0.1",
     "blockly": "git+https://github.com/guillemcordoba/blockly.git#build",
     "lit": "^2.0.0-rc.1",
     "scoped-material-components": "0.1.6"
